--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
   <title>StarWarsApiConsume</title>
@@ -8,6 +8,15 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Star Wars Fans</h1>
+        <app-personaje></app-personaje>
+      </div>
+    </div>
+  </div>
+    
 </body>
 </html>
